updated readme, updated htaccess, added reflective xss

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,13 +1,16 @@
-#RewriteEngine On
-#RewriteCond %{HTTPS} off
-#RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
+RewriteEngine On
 
-#ServerSignature Off
-#Header always unset "Server"
-#Header unset "Server"
+/* @if SECURE */
+	RewriteCond %{HTTPS} off
+	RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
 
-#header always set x-frame-options "SAMEORIGIN"
-#Header always set Content-Security-Policy "upgrade-insecure-requests; default-src https:"
-#Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" env=HTTPS
+	ServerSignature Off
+	Header always unset "Server"
+	Header unset "Server"
 
-ErrorDocument 404 /404.php
+	header always set x-frame-options "SAMEORIGIN"
+	Header always set Content-Security-Policy "upgrade-insecure-requests; default-src https:"
+	Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" env=HTTPS
+/* @endif */
+
+ErrorDocument 404 404.php
